# cohpy

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi.yml
cohpy/: __init__.py  client.py  constants.py  endpoint.py  exceptions.py  leaderboards.py
cohpy/tests/: test_all_leaderboards.py  test_personal_stat.py  test_player_match_history.py  test_specific_leaderboard.py
