[tool.poetry]
name = "cohpy"
version = "1.1.3"
description = ""
authors = ["Andres Garrido <andreslp0001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
flake8 = "^6.0.0"
coverage = "^7.2.2"
flake8-import-order = "^0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
